--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <!-- =================== CSS Linkage ========== -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="color-1.css" />
-
+    <link rel="stylesheet" href="CSS/style-switcher.css">
+<!-- ============Style Switcher=========== -->
+ <link rel="stylesheet" href="color-1.css"  class="alternate-style" title="color-1" disabled/>
+ <link rel="stylesheet" href="CSS/color-2.css"  class="alternate-style" title="color-2" disabled/>
+ <link rel="stylesheet" href="CSS/color-3.css"  class="alternate-style" title="color-3" disabled/>
+ <link rel="stylesheet" href="CSS/color-4.css"  class="alternate-style" title="color-4" disabled/>
+ <link rel="stylesheet" href="CSS/color-5.css"  class="alternate-style" title="color-5" disabled/>
     <title>Document</title>
   </head>
   <body>
@@ -32,19 +38,19 @@
         </div>
         <ul class="nav">
           <li>
-            <a href="#" class="active"><i class="fa fa-home"></i>Home</a>
+            <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i>About</a>
+            <a href="#about"><i class="fa fa-user"></i>About</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-list"></i>Services</a>
+            <a href="#services"><i class="fa fa-list"></i>Services</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
+            <a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-comments"></i>Contact</a>
+            <a href="#contact"><i class="fa fa-comments"></i>Contact</a>
           </li>
         </ul>
       </div>
@@ -52,7 +58,7 @@
       <!-- ==============Main content-container Start========== -->
       <div class="main-content">
         <!-- ============Home-section start============= -->
-        <section class="home section hidden">
+        <section class="home section hidden" id="home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -78,7 +84,7 @@
         </section>
         <!-- ============Home-section end=============== -->
         <!-- ============About-section Start=============== -->
-        <section class="about section hidden">
+        <section class="about section hidden" id="about">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -292,7 +298,7 @@
         </section>
         <!-- ============About-section end=============== -->
         <!-- ============Services-section Start=============== -->
-        <section class="service section hidden">
+        <section class="service section hidden" id="services">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -391,7 +397,7 @@
         <!-- ============Services-section End=============== -->
         <!-- ============Portfolio-section Start=============== -->
 
-        <section class="portfolio section hidden">
+        <section class="portfolio section hidden" id="portfolio">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -463,7 +469,7 @@
         </section>
 
         <!-- ============Contact-section Start=============== -->
-        <section class="contact section">
+        <section class="contact section" id="contact">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -566,5 +572,30 @@
       <!-- ==============Main content-container End========== -->
     </div>
     <!-- ========Main container End============ -->
+
+
+<!-- ================style switcher start=============== -->
+
+    <div class="style-switcher">
+      <div class="style-switcher-toggler s-icon open">
+        <i class="fas fa-cog fa-spin"></i>
+      </div>
+      <div class="day-night s-icon">
+        <i class="fas fa-moon"></i>
+      </div>
+      <h4>Theme Colors</h4>
+      <div class="colors">
+       <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+       <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+       <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+       <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+       <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+      </div>
+    </div>
+<!-- ================style switcher end=============== -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="script.js"></script>
+<script src="./CSS/app.js"></script>
+
   </body>
 </html>
